# Engine

./: .gitignore  Debug32.props  Engine.sln  Makefile  README.md  build.bash  changelog.txt  imgui.ini  imgui_dock.layout  todo.txt
Data/: compute_test_mat.lua  config.ini  graph.dot  post_process.data  quad_mat.lua  test.lua  test.mat
Data/Materials/: debug_mat.lua  modelAnimated_mat.lua  modelDefault.mat  modelDefaultAnimated.mat  modelDefaultInstanced.mat  modelDefault_gi.mat  modelThumbnail.mat  model_inst_mat.lua  model_mat.lua  model_mat_gi.lua  model_thumbnail_mat.lua  post_process_mat.lua  text_mat.lua
Data/Materials/Vita/: model_mat.lua  post_process_mat.lua
Data/Resources/Materials/: aurora_mat.lua  brightpass_mat.lua  clouds_mat.lua  clouds_reprojection_mat.lua  debugDraw_mat.lua  debug_mat.lua  default_mat.lua  default_skybox - Cópia (2).mat  default_skybox.mat  default_skybox_mat.lua  downsample_mat.lua  downsample_mat16.lua  downsample_mat4.lua  downsample_mat8.lua  fxaa_mat.lua  gizmo_mat.lua  grass_mat.lua  lightning_mat.lua  low_poly_terrain_mat.lua  low_poly_terrain_mat_gi.lua  low_poly_water.mat  low_poly_water_mat.lua  modelAnimated_mat.lua  modelDefault.mat  modelDefault_gi.mat  modelMatAnimatedBlend.lua  (+21 more)
Data/Shaders/: bindings.glsl  common.glsl
Data/Textures/: crosshair2.dds  default.dds  moss.dds  obstacle_map.xcf  white.dds
Editor/: AIWindow.cpp  AIWindow.h  AnimationProperties.cpp  AnimationProperties.h  AnimationWindow.cpp  AnimationWindow.h  AssetsBrowserWindow.cpp  AssetsBrowserWindow.h  AssimpLoader.cpp  AssimpLoader.h  Commands.h  ConsoleWindow.cpp  ConsoleWindow.h  Debug32.props  Editor.filters  Editor.vcxproj  Editor.vcxproj.filters  EditorManager.cpp  EditorManager.h  EditorNameManager.cpp  EditorNameManager.h  EditorWindow.cpp  EditorWindow.h  EntityDebugWindow.cpp  EntityDebugWindow.h  Gizmo.cpp  Gizmo.h  MaterialWindow.cpp  MaterialWindow.h  ObjectWindow.cpp  ObjectWindow.h  ProjectBuilder.cpp  ProjectBuilder.h  RenderingWindow.cpp  RenderingWindow.h  SceneWindow.cpp  SceneWindow.h  SkeletonTreeWindow.cpp  SkeletonTreeWindow.h  TerrainWindow.cpp  (+2 more)
Editor/imgui/: imconfig.cpp  imconfig.h  imgui_dock.cpp  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_user.h  imgui_user.inl
Engine/: Application.cpp  Application.h  Engine.vcxproj  GPU.cpp  PSVitaApplication.cpp  PSVitaApplication.h  stb.cpp
Engine/AI/: AIObject.cpp  AIObject.h  AISystem.cpp  AISystem.h  AStarGrid.cpp  AStarGrid.h  AStarNode.h  AStarNodeHeap.cpp  AStarNodeHeap.h
Engine/Game/: EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  Object.cpp  Object.h  SceneManager.cpp  SceneManager.h  Script.cpp  Script.h  Transform.cpp  Transform.h
Engine/Graphics/: Buffers.h  Font.cpp  Font.h  FrameGraph.cpp  FrameGraph.h  Framebuffer.h  Lights.h  Material.cpp  Material.h  MaterialInfo.h  Mesh.h  MeshDefaults.cpp  MeshDefaults.h  Model.cpp  Model.h  ParticleSystem.cpp  ParticleSystem.h  Renderer.cpp  Renderer.h  RendererStructs.h  ResourcesLoader.cpp  ResourcesLoader.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBufferTypes.h  VertexArray.cpp  VertexArray.h  VertexTypes.h
Engine/Physics/: BoundingVolumes.h  Collider.cpp  Collider.h  Ray.cpp  Ray.h  RigidBody.cpp  RigidBody.h  Trigger.cpp  Trigger.h
Engine/Program/: Allocator.cpp  Allocator.h  FileManager.cpp  FileManager.h  Input.cpp  Input.h  Log.cpp  Log.h  PSVCompiler.cpp  PSVCompiler.h  Random.cpp  Random.h  Serializer.cpp  Serializer.h  StringID.h  Utils.cpp  Utils.h  Version.cpp  Version.h  Window.cpp  Window.h
Engine/Sound/: SoundSource.cpp  SoundSource.h
PSVita_Test/: CMakeLists.txt  Makefile  PSVita_Test.vcxproj  cmake_install.cmake  main.cpp
PSVita_Test/Data/Materials/: col.mat  color_mat.lua  modelDefault.mat  model_mat.lua  sand.mat  text_mat.lua  texture_mat.lua
PSVita_Test/Data/Shaders/GXM/: model_f_cg.gxp  model_v_cg.gxp  text_v_cg.gxp  texture_v_cg.gxp
PSVita_Test/Data/Textures/: jorvik.fnt
Test/: Test.vcxproj  main.cpp
TestProj/: Debug32.props  TestProj.vcxproj  main.cpp
include/bullet/: btBulletCollisionCommon.h
(+521 files in other folders)
